k8s_manifests_minikube/virtual-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtual-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virtual-worker
  template:
    metadata:
      labels:
        app: virtual-worker
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: virtual-worker
          image: 357229909289.dkr.ecr.us-east-1.amazonaws.com/dsop/store-virtual-worker:1.0.1-182083f
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 100m
              memory: 50Mi
          readinessProbe:
            exec:
              command:
                - cat
                - /proc/1/status
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - cat
                - /proc/1/status
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 10
