k8s_manifests_minikube/mongodb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: mongodb
          image: prasad890/dsop-mongo:6.0.6
          ports:
            - containerPort: 27017
              name: mongodb
          resources:
            requests:
              cpu: 100m
              memory: 800Mi
            limits:
              cpu: 500m
              memory: 2000Mi
          livenessProbe:
            exec:
              command:
                - mongosh
                - "--quiet"
                - "--eval"
                - "db.adminCommand('ping')"
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 15
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - mongosh
                - "--quiet"
                - "--eval"
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 15
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
  type: ClusterIP
