k8s_manifests_minikube/store-admin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-admin
  template:
    metadata:
      labels:
        app: store-admin
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: store-admin
          image: 357229909289.dkr.ecr.us-east-1.amazonaws.com/dsop/store-admin:1.0.7
          ports:
          - containerPort: 8081
            name: store-admin
          # env:
          # - name: VUE_APP_PRODUCT_SERVICE_URL
          #   value: "http://product-service:3002/"
          # - name: VUE_APP_MAKELINE_SERVICE_URL
          #   value: "http://makeline-service:3001/"  
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /health
              port: 8081
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            failureThreshold: 3
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            failureThreshold: 5
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: store-admin
spec:
  ports:
    - name: http  
      port: 8081
      targetPort: 8081
  selector:
    app: store-admin
  type: ClusterIP
